src/test/ui/mismatched_types/overloaded-calls-bad.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/overloaded-calls-bad.rs:28:15
   |
LL |     let ans = s("what");
   |               ^^------^
   |                 |
   |                 expected `isize`, found `&'static str`
   |
help: provide an argument of the correct type
   |
LL |     let ans = ({isize});
   |               ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/overloaded-calls-bad.rs:29:15
   |
LL |     let ans = s();
   |               ^^^ an argument of type isize is missing
   |
help: provide the argument
   |
LL |     let ans = ({isize});
   |               ^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/overloaded-calls-bad.rs:31:15
   |
LL |     let ans = s("burma", "shave");
   |               ^^-------^^^^^^^^^^
   |                 |
   |                 expected `isize`, found `&'static str`
   |                 argument of type isize unexpected
   |
help: did you mean
   |
LL |     let ans = ({isize});
   |               ^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
